--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -297,6 +297,7 @@
   },
   "blockUnblockUser": {
     "title": "塔拉瓦封鎖/解除封鎖用戶",
+    "pageName": "封锁/解封",
     "searchByName": "按名稱搜索",
     "listOfUsers": "發送垃圾郵件的用戶列表",
     "name": "姓名",
@@ -310,8 +311,10 @@
     "talawaApiUnavailable": "服務不可用。它在運行嗎？還要檢查您的網絡連接。",
     "allMembers": "所有成员",
     "blockedUsers": "被阻止的用户",
-    "searchFirstName": "输入名字",
-    "searchLastName": "输入姓氏"
+    "searchByFirstName": "按名字搜索",
+    "searchByLastName": "按姓氏搜索",
+    "noResultsFoundFor": "未找到结果 ",
+    "noSpammerFound": "未发现垃圾邮件发送者"
   },
   "forgotPassword": {
     "title": "塔拉瓦忘記密碼",
