--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -146,10 +146,6 @@
     "events": "Eventos",
     "blockedUsers": "Usuarios bloqueados",
     "requests": "Solicitudes",
-    "deleteOrganization": "Eliminar Organización",
-    "deleteMsg": "¿Desea eliminar esta organización?",
-    "no": "No",
-    "yes": "Sí",
     "talawaApiUnavailable": "El servicio Talawa-API no está disponible. ¿Está funcionando? Compruebe también la conectividad de su red."
   },
   "organizationPeople": {
@@ -366,10 +362,16 @@
     "updateYourDetails": "Actualiza tus datos",
     "updateYourPassword": "Actualice su contraseña",
     "updateOrganization": "Actualizar Organización",
-    "deleteOrganization": "Eliminar Organización",
     "seeRequest": "Ver Solicitud",
     "settings": "Ajustes",
-    "noData": "Sin datos"
+    "noData": "Sin datos",
+    "deleteOrganization": "Eliminar Organización",
+    "deleteMsg": "¿Desea eliminar esta organización?",
+    "no": "No",
+    "yes": "Sí",
+    "longDelOrgMsg": "Al hacer clic en el botón Eliminar organización, la organización se eliminará permanentemente junto con sus eventos, etiquetas y todos los datos relacionados.",
+    "otherSettings": "Otras Configuraciones",
+    "changeLanguage": "Cambiar Idioma"
   },
   "userUpdate": {
     "firstName": "Primer nombre",
@@ -406,8 +408,8 @@
     "description": "Descripción",
     "location": "ubicación",
     "displayImage": "Mostrar imagen",
-    "isPublic": "Es público",
-    "isRegistrable": "Es registrable",
+    "isPublic": "Público",
+    "isVisibleInSearch": "Visible en la búsqueda",
     "saveChanges": "Guardar cambios",
     "cancel": "Cancelar",
     "enterNameOrganization": "Ingrese el nombre de la organización",
