--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -361,6 +361,7 @@
   },
   "orgSettings": {
     "title": "Talawa Setting",
+    "pageName": "Settings",
     "updateOrganization": "Update Organization",
     "deleteOrganization": "Delete Organization",
     "seeRequest": "See Request",
