--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -359,6 +359,7 @@
   },
   "orgSettings": {
     "title": "तलावा सेटिंग",
+    "pageName": "सेटिंग्स",
     "updateYourDetails": "अपना विवरण अपडेट करें",
     "updateYourPassword": "अपना पासवर्ड अपडेट करें",
     "updateOrganization": "अद्यतन संगठन",
