--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -567,7 +567,8 @@
     "create": "Créer",
     "listView": "Vue en liste",
     "calendarView": "Vue du calendrier",
-    "allDay": "Toute la journée"
+    "allDay": "Toute la journée",
+    "eventCreated": "Événement créé et publié avec succès."
   },
   "userEventCard": {
     "location": "Emplacement",
