Feature Request: Adding a dialog to go to plugin store after an organization is created by the admin (#951)
* Add/ test for OrgPost.tsx

* fix:  org post back to default

* Added Dialog 2

* Updated Dialog UI

* Removed Extra code

* Updated Plugin store

* fix: warnings and solves #951  & #948

* fix: warnings and solves #951  & #948

* fix: warnings and solves #951  & #948

* Fix: UI Redesign

* fix: merge

* fix

* Update AddOnStore.tsx

* Fixed Merge Errors

* Add test: for OrgEntry

* Test 3

* fix test 4

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -86,6 +86,11 @@
     "cancel": "Cancel",
     "noOrgErrorTitle": "Organizations Not Found",
     "noOrgErrorDescription": "Please create an organization through dashboard",
+
+    "manageFeatures": "Manage Features",
+    "manageFeaturesInfo": "Creation Successful ! Please select features that you want to enale for this organization from the plugin store.",
+    "goToStore": "Go to Plugin Store",
+    "enableEverything": "Enable Everything",
     "noResultsFoundFor": "No results found for "
   },
   "orgListCard": {
@@ -442,7 +447,9 @@
   "addOnEntry": {
     "enable": "Enabled",
     "install": "Install",
-    "uninstall": "Uninstall"
+    "uninstall": "Uninstall",
+    "uninstallMsg": "This feature is now removed from your organization",
+    "installMsg": "This feature is now enabled in your organization"
   },
   "memberDetail": {
     "title": "User Details",
