--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -366,13 +366,15 @@
     "seeRequest": "अनुरोध देखें",
     "settings": "समायोजन",
     "noData": "कोई डेटा नहीं",
+    "otherSettings": "अन्य सेटिंग्स",
+    "changeLanguage": "भाषा बदलें"
+  },
+  "deleteOrg": {
     "deleteOrganization": "संगठन हटाएं",
     "deleteMsg": "क्या आप इस संगठन को हटाना चाहते हैं?",
     "no": "नहीं",
-    "yes": "हाँ",
-    "longDelOrgMsg": "आगे बढ़कर संगठन को हटाने के बटन पर क्लिक करके संगठन को स्थायी रूप से हटा दिया जाएगा, साथ ही उसके आयोजन, टैग और सभी संबंधित डेटा के साथ।",
-    "otherSettings": "अन्य सेटिंग्स",
-    "changeLanguage": "भाषा बदलें"
+    "yes": "हां",
+    "longDelOrgMsg": "संगठन हटाने के बटन पर क्लिक करके, संगठन को स्थायित रूप से हटा दिया जाएगा, साथ ही उसके आयोजन, टैग और सभी संबंधित डेटा भी हटा दिया जाएगा।"
   },
   "userUpdate": {
     "firstName": "पहला नाम",
