Events screen and Post Comment Modal for Talawa-user-portal  (#963)
* Create login and register page for user portal

* Lint public locales

* Create tests for login page components

* Add react import in tests

* Create organizations screen for user portal

* Fix failing tests and lint code

* fix failing tests

* Add tests for organization screen and componenets

* Fix non-null assertions

* Fix non-null assertions in organizations test

* Fix bootstrap migration changes

* Add Home Screen along with other components

* Fix failing tests

* Add required tests and Offcanvas navbar

* Remove unused variables from tests

* Sync the Mutations with talawa-api

* Add Settings and Donate Screen

* Add multilingual support for the screens

* Add events screen without calendar view

* Add multilingual support to Events screen

* Fix failing tests due to merge

* Add Post Comment functionality

* Refactor Events tests

* Deprecate event registrants from query

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -565,5 +565,34 @@
     "yourPreviousDonations": "Your Previous Donations",
     "donate": "Donate",
     "nothingToShow": "Nothing to show here."
+  },
+  "userEvents": {
+    "nothingToShow": "Nothing to show here.",
+    "search": "Search",
+    "createEvent": "Create Event",
+    "eventTitle": "Event Title",
+    "eventDescription": "Event Description",
+    "eventLocation": "Event Location",
+    "startDate": "Select Start Date",
+    "endDate": "Select End Date",
+    "publicEvent": "Public Event",
+    "registerable": "Registerable",
+    "recurring": "Recurring",
+    "startTime": "Start Time",
+    "endTime": "End Time",
+    "cancel": "Cancel",
+    "create": "Create",
+    "listView": "List View",
+    "calendarView": "Calendar View",
+    "allDay": "All Day",
+    "eventCreated": "Event created and posted successfully."
+  },
+  "userEventCard": {
+    "location": "Location",
+    "starts": "Starts",
+    "ends": "Ends",
+    "creator": "Creator",
+    "alreadyRegistered": "Already registered",
+    "register": "Register"
   }
 }
