--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -559,5 +559,34 @@
     "yourPreviousDonations": "您之前的捐款",
     "donate": "捐",
     "nothingToShow": "這裡沒有什麼可顯示的。"
+  },
+  "userEvents": {
+    "nothingToShow": "這裡沒有什麼可顯示的。",
+    "search": "搜索",
+    "createEvent": "創建事件",
+    "eventTitle": "活動標題",
+    "eventDescription": "活動說明",
+    "eventLocation": "活動地點",
+    "startDate": "選擇開始日期",
+    "endDate": "選擇結束日期",
+    "publicEvent": "公共活動",
+    "registerable": "可註冊",
+    "recurring": "再次發生的",
+    "startTime": "開始時間",
+    "endTime": "時間結束",
+    "cancel": "取消",
+    "create": "創造",
+    "listView": "列表顯示",
+    "calendarView": "日曆視圖",
+    "allDay": "整天",
+    "eventCreated": "活動已成功創建並發布。"
+  },
+  "userEventCard": {
+    "location": "地點",
+    "starts": "開始",
+    "ends": "結束",
+    "creator": "創作者",
+    "alreadyRegistered": "已經註冊",
+    "register": "登記"
   }
 }
