Pagination Done for Orglist

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -86,7 +86,7 @@
     "cancel": "Cancel",
     "noOrgErrorTitle": "Organizations Not Found",
     "noOrgErrorDescription": "Please create an organization through dashboard",
-
+    "endOfResults": "End of results",
     "manageFeatures": "Manage Features",
     "manageFeaturesInfo": "Creation Successful ! Please select features that you want to enale for this organization from the plugin store.",
     "goToStore": "Go to Plugin Store",
