--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -84,6 +84,7 @@
     "sort": "Trier",
     "filter": "Filtre",
     "cancel": "Annuler",
+    "endOfResults": "Fin des résultats",
     "noOrgErrorTitle": "Organisations non trouvées",
     "noOrgErrorDescription": "Veuillez créer une organisation via le tableau de bord",
     "noResultsFoundFor": "Aucun résultat trouvé pour "
