--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -84,6 +84,7 @@
     "sort": "Ordenar",
     "filter": "Filtrar",
     "cancel": "Cancelar",
+    "endOfResults": "Fin de los resultados",
     "noOrgErrorTitle": "Organizaciones no encontradas",
     "noOrgErrorDescription": "Por favor, crea una organización a través del panel de control",
     "noResultsFoundFor": "No se encontraron resultados para "
