--- a/public/locales/fr.json
+++ b/public/locales/fr.json
@@ -105,6 +105,8 @@
     "name": "Nom",
     "email": "E-mail",
     "roles_userType": "Rôle/Type d'utilisateur",
+    "joined_organizations": "Organisations rejointes",
+    "view": "Vue",
     "admin": "ADMIN",
     "superAdmin": "SUPERADMIN",
     "user": "UTILISATEUR",
