--- a/public/locales/hi.json
+++ b/public/locales/hi.json
@@ -105,6 +105,8 @@
     "name": "नाम",
     "email": "ईमेल",
     "roles_userType": "भूमिका/उपयोगकर्ता-प्रकार",
+    "joined_organizations": "संगठनों में शामिल हुए",
+    "view": "देखें",
     "admin": "व्यवस्थापक",
     "superAdmin": "सुपरएडमिन",
     "user": "उपयोगकर्ता",
