--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -85,6 +85,7 @@
     "searchByName": "Search By Name",
     "organizations": "Organizations",
     "createOrganization": "Create Organization",
+    "createSampleOrganization": "Create Sample Organization",
     "description": "Description",
     "location": "Location",
     "isPublic": "Is Public",
@@ -106,7 +107,8 @@
   "orgListCard": {
     "admins": "Admins",
     "members": "Members",
-    "manage": "Manage"
+    "manage": "Manage",
+    "sampleOrganization": "Sample Organization"
   },
   "paginationList": {
     "rowsPerPage": "rows per page",
@@ -386,6 +388,7 @@
   },
   "deleteOrg": {
     "deleteOrganization": "Delete Organization",
+    "deleteSampleOrganization": "Delete Sample Organization",
     "deleteMsg": "Do you want to delete this organization?",
     "no": "No",
     "yes": "Yes",
