--- a/public/locales/sp.json
+++ b/public/locales/sp.json
@@ -605,5 +605,13 @@
     "taskNotCompleted": "La tarea aún no se ha completado",
     "event": "Evento",
     "organization": "Organización"
+  },
+  "advertisement": {
+    "title": "Anuncios",
+    "pHeading": "Gestionar anuncios",
+    "activeAds": "Campañas activas",
+    "archievedAds": "Campañas completadas",
+    "pMessage": "No hay anuncios disponibles para esta campaña.",
+    "delete": "Eliminar"
   }
 }
